# cvs

./: .gitignore  AUTHORS  BUGS  CYCLIC-CVS-FAQ  ChangeLog  ChangeLog.fsf  DEVEL-CVS  FAQ  FIXED-BUGS  HACKING  INSTALL  INSTALL-CVS  MINOR-BUGS  Makefile.am  Makefile.in  NEWS  README  README.VMS  TESTS  TODO  acconfig.h  acinclude.m4  aclocal.m4  build.com  config.h.in  configure  configure.in  cvs-format.el  cvs.spec  cvs.spec.in  cvsinit.sh  cvsnt.dep  cvsnt.dsp  cvsnt.dsw  cvsnt.mak  cvsnt.vcp  depcomp  devel-cvs  gnulib-modules  gnulib-update  (+6 more)
build-aux/: bison-missing
contrib/: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  ccvs-rsh.pl  check_cvs.in  clmerge  clmerge.in  cln_hist.in  cln_hist.pl  commit_prep.in  commit_prep.pl  cvs2vendor.sh  cvs_acls.html  cvs_acls.in  cvs_acls.pl  cvscheck.man  cvscheck.sh  cvshelp.man  cvslog.sh  debug_check_log.sh  descend  descend.man  descend.sh  listener.c  log.in  log.pl  log_accum.in  log_accum.pl  mfpipe.in  mfpipe.pl  patch-2.1-.new-fix  pvcs2rcs.in  pvcs_to_rcs  rcs-5.7-commitid.patch  rcs-to-cvs  rcs-to-cvs.sh  rcs2log  rcs2log.sh  (+8 more)
contrib/elib/: ChangeLog  Makefile.in
contrib/elib/elib-1.0/: Makefile  avltree.el  cookie.el  queue-f.el  read.el
contrib/pam/: ChangeLog  Makefile.in
contrib/pcl-cvs/: .gitignore  ChangeLog  INSTALL  Makefile  Makefile.in  NEWS  README  pcl-cvs-lucid.elc  pcl-cvs.el  pcl-cvs.elc  pcl-cvs.texinfo  texinfo.tex
contrib/pcl-cvs/elib/: INSTALL  bintree.el  dll-debug.el  dll.el  elib-compile-all.el  elib-node.el  elib-test.el  elib.texi  queue-m.el  stack-m.el  startup-template.el
diff/: .gitignore  ChangeLog  Makefile.am  Makefile.in  analyze.c  build_diff.com  diff.c  diff3.c  diffrun.h  libdiff.dep  libdiff.dsp  libdiff.mak  system.h  util.c
doc/: .gitignore  CVSvn.texi  ChangeLog  DIFFUTILS-2.7-BUG  Makefile.am  Makefile.in  RCSFILES  README.DOCS  cvs-paper.ps  cvs.1  cvs.man.footer  cvs.man.header  cvs.texinfo  cvsclient.texi  mkman.in  stamp-1  stamp-vti  version-client.texi  version.texi
doc/i18n/: ChangeLog  Makefile.in
doc/i18n/pt_BR/: ChangeLog  LEIAME  Makefile.in  README  cvs.texinfo  glossary
emx/: .gitignore  ChangeLog  Makefile.in  README  config.h  filesubr.c  options.h  rcmd.c  rcmd.h  startserver.c  system.c
examples/: ChangeLog  Makefile.in  checkoutlist  comb  commitinfo  cvswrappers  editinfo  loginfo  modules  rcsinfo  taginfo  unwrap  wrap
lib/: .gitignore  ChangeLog  LIB.dep  Makefile.am  Makefile.gnulib  Makefile.in  PROTO.h  base64.c  build_lib.com  canon-host.c  error.c  fncase.c  fnmatch.c  fseeko.c  ftello.c  getaddrinfo.c  getdate.c  getdate.y  getdelim.c  getline.c  getline.h  getndelim2.c  getndelim2.h  getnline.c  getnline.h  getopt.c  getopt.h  getpass.c  glob.c  glob_.h  lib.dsp  lib.mak  libcvs.dep  libcvs.dsp  libcvs.mak  mbuiter.h  md5.c  mktime.c  pagealign_alloc.c  progname.c  (+25 more)
m4/: .gitignore  ChangeLog  Makefile.am  Makefile.in  acx_extract_cpp_defn.m4  acx_with_external_zlib.m4  asx_version_compare.m4  bison.m4  dos.m4  full-header-path.m4  getline.m4  getndelim2.m4  getnline.m4  gettext.m4  glob.m4  gnulib-cache.m4  gnulib-comp.m4  gnulib.m4  lstat.m4  mbiter.m4  stat.m4  stdint.m4  sunos57-select.m4  unlocked-io.m4
macintosh/: ChangeLog  MacCVS68k.sit.hqx  MacCVSPPC.sit.hqx  Makefile.in  README.MacCVS  ae_if.c  alloca.c  config.h  filesubr.c  mac_init.c  maccvs.pch  maccvs.rsrc.sit.hqx  maccvs_projects.sit.hqx  macos_filesys.c  options.h  pwd.c  pwd.h  rcmd.c  run.c  server_if.c
maint-aux/: Makefile.am  Makefile.in  gnulib-filelist.txt  gnulib-modules  gnulib-update  gnulib.txt
man/: ChangeLog  Makefile.in  cvs.1  cvs.5  cvsinit.8
os2/: ChangeLog  Makefile.in  README  client.c  config.h  cvslogin.c  dirent.c  filesubr.c  getpass.c  icc.compilation-errors  login.c  options.h  popen.c  popen.h  porttcp.c  pwd.c  pwd.h  rcmd.c  run.c  startserver.c  tcpip.h  tcpip.mak  test-makefile  threads.c  waitpid.c  watcom.mak
src/: .gitignore  ChangeLog  ChangeLog-9395  Makefile.am  Makefile.in  RCS-patches  README-rm-add  add.c  admin.c  annotate.c  base.c  base.h  buffer.c  buffer.h  build_src.com  checkin.c  checkout.c  classify.c  client.c  client.c.diff  client.h  commit.c  create_adm.c  cvs.h  cvsbug.sh  cvsrc.c  diff.c  edit.c  edit.h  entries.c  entries.h  error.c  error.h  expand_path.c  fileattr.c  fileattr.h  filesubr.c  filesubr.h  find-names.h  find_names.c  (+74 more)
src/tests/: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  atspecific.m4  basic.at  init.at  package.m4.in  suite  suite.at  version.at
tools/: ChangeLog  Makefile.in
tools/pcl-cvs/: ChangeLog  INSTALL  Makefile  Makefile.in  ToDo  pcl-cvs-startup.el  pcl-cvs.el
vms/: ChangeLog  Makefile.am  Makefile.in  build_vms.com  config.h  config.h.in  filesubr.c  getpass.c  misc.c  misc.h  ndir.c  ndir.h  options.h  pwd.c  pwd.h  rcmd.c  stamp-ch  startserver.c  vms.h
windows-NT/: .gitignore  ChangeLog  JmgStat.c  JmgStat.h  Makefile  Makefile.am  Makefile.in  README  alloca.h  config.h  config.h.in  config.h.in.footer  config.h.in.in  cvsntfix.pl  dirent.c  dirent.h  filesubr.c  fix-msvc-mak.pl  mkconfig.pl  mkdir.c  ndir.c  ndir.h  options.h  pwd.c  pwd.h  rcmd.c  run.c  sanity.sh  stamp-ch  stamp-chi  stamp-sh  startserver.c  stdbool.h  stdint.h  strippath.c  stripslash.c  unistd.c  unistd.h  win32.c  woe32.c  (+1 more)
windows-NT/SCC/: ChangeLog  Makefile.in  README.txt  pubscc.h  scc.c
windows-NT/sys/: ChangeLog  socket.h  types.h
zlib/: .gitignore  ChangeLog  Makefile  Makefile.dj2  Makefile.in  build_zlib.com  deflate.c  libz.dep  libz.dsp  libz.mak  zlib.def  zlib.dep  zlib.dsp  zlib.mak  zlib.rc  zutil.c  zutil.h
